@@ -14,7 +14,7 @@ You should have received a copy of the GNU General Public License
 along with this program; if not, write to the Free Software
 Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 
-    $Id: defs.h,v 1.13 2006/08/01 11:58:47 vvd0 Exp $
+    $Id: defs.h,v 1.14 2006/10/25 11:09:45 vvd0 Exp $
 */
 
 #ifndef __DEFS_H__
@@ -187,6 +187,7 @@ typedef struct
 		int		*Int;
 		int		opt;
 	} opt1;
+	int		str_len;
 	int		opt2;
 } param_t;
 
